--- a/src/main/resources/template/index.css
+++ b/src/main/resources/template/index.css
@@ -8,7 +8,7 @@
 #titulo {
     font-family: 'Segoe UI';
     font-size: 10ex;
-    color:chartreuse;
+    color:black;
     text-align: center;
 } 
 
@@ -16,10 +16,10 @@
 #subtitulo {
     font-family: Tahoma;
     font-size: 7ex;
-    color:chartreuse;
+    color:black;
     text-align: center;
 }
 
 body {
-    background-color: black;
+    background-color: hotpink;
 }
