--- a/src/main/resources/template/index.html
+++ b/src/main/resources/template/index.html
@@ -7,7 +7,7 @@
     
     <link rel="stylesheet" href="index.css" media="screen">
     
-    <title>Document</title>
+    <title>Home</title>
 </head>
 <body>
     <div>
